Fix wierd image overflow issue

--- a/public/css/bg-video.css
+++ b/public/css/bg-video.css
@@ -34,7 +34,9 @@
 .vid-info h1 { font-size: 2rem; font-weight: 700; margin-top: 0; line-height: 1.2; }
 .vid-info a { display: block; color: #fff; text-decoration: none; background: rgba(0,0,0,0.5); transition: .6s background; border-bottom: none; margin: 1rem auto; text-align: center; }
 @media (min-aspect-ratio: 16/9) {
-  .video-foreground { height: 300%; top: -100%; }
+}
+@media only screen and (min-width: 2000px) {
+  .video-foreground { height: 300%; top: -100%; }    
 }
 @media (max-aspect-ratio: 16/9) {
   .video-foreground { width: 100%; left: 0%; }
