--- a/public/css/style.css
+++ b/public/css/style.css
@@ -558,23 +558,50 @@ body.mobile-nav-active #mobile-nav-toggle {
 # Video Background
 ------------------------------------------------------*/
 /*video as background; container element makes it responsive */
-video#video-bg.video-bg {
-  padding: 10px 0 10px 0;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%,-50%);
-  width: 50%;
-  background: transparent url('960x360.png') no-repeat;
-  background-size: cover;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+
+
+@media only screen and (min-width: 600px) {
+    video#video-bg.video-bg {
+      padding: 10px 0 10px 0;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%,-50%);
+      background: transparent url('960x360.png') no-repeat;
+      background-size: cover;
+      margin-left: auto;
+      margin-right: auto;
+      display: block;
+    }
+
+    /* disable video (e.g. in a media query) by setting .video-container to display: none; as appropriate */
+    .video-container {
+      width: 100%;
+      overflow: hidden;
+    }
 }
 
-/* disable video (e.g. in a media query) by setting .video-container to display: none; as appropriate */
-.video-container {
-  width: 100%;
-  overflow: hidden;
+
+
+@media only screen and (max-width: 600px) {
+  video#video-bg.video-bg {
+    padding: 10px 0 10px 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    width: 80%;
+    height: 80%;
+    background: transparent url('960x360.png') no-repeat;
+    background-size: cover;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+  }
+
+  /* disable video (e.g. in a media query) by setting .video-container to display: none; as appropriate */
+  .video-container {
+    width: 100%;
+    overflow: hidden;
+  }
 }
 
 /* Overview Section
